[package]
name = "modern-arecibo"
description = "Generate images of the Arecibo message with a user-provided population and genome size"
authors = ["Jim Rybarski <jim@rybarski.com>"]
repository = "https://github.com/jimrybarski/modern-arecibo"
keywords = ["astronomy", "arecibo", "genome", "biology"]
categories = ["science", "science::bioinformatics::sequence-analysis", "multimedia::images", "command-line-utilities", "aerospace::space-protocols"]
version = "1.0.3"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
image = "0.25.5"
